# HaversineDistance

./: CMakeLists.txt  LICENSE.md  Package.swift  README.md
Sources/HaversineDistance/: HaversineDistance.swift
Tests/: LinuxMain.swift
Tests/HaversineDistanceTests/: HaversineDistanceTests.swift  XCTestManifests.swift  haversineFormulaTests.swift
src/: haversineFormula.cpp
src/include/: haversineFormula.h
